--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <script type="module" src="time.js"></script>
+    <div id="date"></div>
+    <div id="time"></div>
 </body>
 </html>
